--- a/Source/Makefile
+++ b/Source/Makefile
@@ -10,7 +10,7 @@
 PART=LM3S8962
 
 #
-# The base directory for StellarisWare.
+# The base directory for the project.
 #
 ROOT=../
 
@@ -22,23 +22,29 @@ include ${ROOT}/makedefs
 #
 # Where to find source files that do not live in this directory.
 #
-VPATH=./drivers
+VPATH=./App/Src
+VPATH+=./HAL/Oled/Src
+VPATH+=./HAL/IO/Src
+VPATH+=./lwipConfig
 VPATH+=./lwip-1.3.2/apps/httpserver_raw
-VPATH+=./utils
+VPATH+=./Utils/Src
+VPATH+=./WebServer
 
 #
 # Where to find header files that do not live in the source directory.
 #
 IPATH=.
-IPATH+=..
-IPATH+=../../..
-IPATH+=../../../third_party/lwip-1.3.2/apps
-IPATH+=../../../third_party/lwip-1.3.2/ports/stellaris/include
-IPATH+=../../../third_party/lwip-1.3.2/src/include
-IPATH+=../../../third_party/lwip-1.3.2/src/include/ipv4
+IPATH+=./App/Head
+IPATH+=./HAL/Oled/Head
+IPATH+=./HAL/IO/Head
+IPATH+=./LM3S_Lib/inc
+IPATH+=./lwip-1.3.2/apps
+IPATH+=./lwip-1.3.2/ports/stellaris/include
+IPATH+=./lwip-1.3.2/src/include
+IPATH+=./lwip-1.3.2/src/include/ipv4
 
 #
-# The default rule, which causes the Sample Ethernet I/O Control Application using lwIP 1.3.2 to be built.
+# The default rule, which causes the Ethernet I/O Control Application using lwIP 1.3.2 to be built.
 #
 all: ${COMPILER}
 all: ${COMPILER}/webserver_io.axf
@@ -53,12 +59,13 @@ clean:
 # The rule to create the target directory.
 #
 ${COMPILER}:
+	#cd ${ROOT}/Output/
 	@mkdir ${COMPILER}
 
 #
-# Rules for building the Sample Ethernet I/O Control Application using lwIP 1.3.2.
+# Rules for building the Ethernet I/O Control Application using lwIP 1.3.2.
 #
-${COMPILER}/webserver_io.axf: ${COMPILER}/cgifuncs.o
+#${COMPILER}/webserver_io.axf: ${COMPILER}/cgifuncs.o
 ${COMPILER}/webserver_io.axf: ${COMPILER}/main.o
 ${COMPILER}/webserver_io.axf: ${COMPILER}/httpd.o
 ${COMPILER}/webserver_io.axf: ${COMPILER}/io.o
@@ -68,8 +75,8 @@ ${COMPILER}/webserver_io.axf: ${COMPILER}/lwiplib.o
 ${COMPILER}/webserver_io.axf: ${COMPILER}/rit128x96x4.o
 ${COMPILER}/webserver_io.axf: ${COMPILER}/startup_${COMPILER}.o
 ${COMPILER}/webserver_io.axf: ${COMPILER}/ustdlib.o
-${COMPILER}/webserver_io.axf: ${ROOT}/LM3S_Lib/DriverLib/${COMPILER}/libdriver.a
-${COMPILER}/webserver_io.axf: webserver_io.ld
+${COMPILER}/webserver_io.axf: ${ROOT}/Source/LM3S_Lib/DriverLib/libdriver.a
+${COMPILER}/webserver_io.axf: WebServer_IO.ld
 SCATTERgcc_WebServer_io=webserver_io.ld
 ENTRY_WebServer_io=ResetISR
 
